# ai-ide

./: .gitignore  Aide.txt  BUILD_INDEX.md  README.md  RUNNING_APP.md  add_custom_editor_and_features.py  add_qt_logic.py  add_qt_ui.py  build copy.py  build.py  changes-advanced.md  changes-middle-lower.md  changes.md  config.json  roadmap.md  run-app.bat
ai-ide/src/: CMakeLists.txt  main.cpp  resources.qrc
ai-ide/src/ai/: AIAction.hpp  AIProvider.hpp  AIRequest.hpp  AIResponse.hpp  ActionLog.cpp  ActionLog.hpp  AntigravityProvider.cpp  AntigravityProvider.hpp  ClaudeProvider.cpp  ClaudeProvider.hpp  GeminiProvider.cpp  GeminiProvider.hpp  OllamaProvider.cpp  OllamaProvider.hpp  Patch.hpp  VectorIndexManager.cpp  VectorIndexManager.hpp
ai-ide/src/core/: Document.cpp  Document.hpp
ai-ide/src/git/: GitClient.cpp  GitClient.hpp
ai-ide/src/ui/: AIChatPanel.cpp  AIChatPanel.hpp  AIPatchController.cpp  AIPatchController.hpp  AdminDialog.cpp  AdminDialog.hpp  ClipboardListener.cpp  ClipboardListener.hpp  CommandPalette.cpp  CommandPalette.hpp  CompletionPopup.cpp  CompletionPopup.hpp  CppHighlighter.cpp  CppHighlighter.hpp  CustomEditor.cpp  CustomEditor.hpp  DebugWidget.cpp  DebugWidget.hpp  DiffView.cpp  DiffView.hpp  EditorWindow.cpp  EditorWindow.hpp  FileBrowser.cpp  FileBrowser.hpp  FindReplaceDialog.cpp  FindReplaceDialog.hpp  GitConflictResolver.cpp  GitConflictResolver.hpp  GitHistoryWidget.cpp  GitHistoryWidget.hpp  GitWidget.cpp  GitWidget.hpp  LspClient.cpp  LspClient.hpp  OutlineWidget.cpp  OutlineWidget.hpp  ProblemsWidget.cpp  ProblemsWidget.hpp  (+9 more)
(+7 files in other folders)
